<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.mlamboi.weather.ui.home.HomeViewModel" />

        <variable
            name="model"
            type="com.mlamboi.weather.data.model.WeatherInformation" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@{Double.toString(model.main.temp).concat(@string/degree_celsius_symbol)}"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@{model.name}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@{model.weather[0].main}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temperature" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/feel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@{@string/feels_like(Double.toString(model.main.feelsLike), @string/degree_celsius_symbol)}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/condition" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_pressure"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/card_humidity"
            app:layout_constraintEnd_toStartOf="@+id/card_wind"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refresh">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@{String.valueOf(model.main.pressure)}"
                    app:drawableTopCompat="@drawable/ic_pressure" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_wind"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_pressure"
            app:layout_constraintEnd_toStartOf="@+id/card_sunrise"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_pressure"
            app:layout_constraintTop_toTopOf="@+id/card_pressure">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@{String.valueOf(model.wind.speed)}"
                    app:drawableTopCompat="@drawable/ic_wind" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_sunrise"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_wind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_wind"
            app:layout_constraintTop_toTopOf="@+id/card_wind">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:drawableTopCompat="@drawable/ic_sunrise" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_humidity"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/card_visibility"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_pressure">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@{String.valueOf(model.main.humidity)}"
                    app:drawableTopCompat="@drawable/ic_humidity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_visibility"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_humidity"
            app:layout_constraintEnd_toStartOf="@+id/card_sunset"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_humidity"
            app:layout_constraintTop_toTopOf="@+id/card_humidity"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@{String.valueOf(model.visibility)}"
                    app:drawableTopCompat="@drawable/ic_visibility" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visibility" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_sunset"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_visibility"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_visibility"
            app:layout_constraintTop_toTopOf="@+id/card_visibility"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:drawableTopCompat="@drawable/ic_sunset" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:onClick="onRefreshClicked"
            android:text="@string/refresh"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>